# yt-interval

./: .gitignore  GUI.py  ParseInput.py  README.md  app.py  pyproject.toml  requirements.txt  worker.py  yt-interval.py
newWebApp/: .gitignore  ParseInput.py  README.md  env.yml
newWebApp/static/: style.css
newWebApp/templates/: index.html  waiting.html
newwebapp/: __init__.py
templates/: index.html  success.html  waiting.html
tests/: test_newwebapp.py
