[tool.poetry]
name = "newwebapp"
version = "0.1.0"
description = ""
authors = ["Christian Jørgensen <friis93@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"
certifi = "2019.11.28"
chardet = "3.0.4"
flask = "^1.1.1"
pafy = "^0.5.5"
requests = "^2.23.0"
youtube-dl = "^2020.3.6"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
